scrolling fix on mobile

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -6,7 +6,7 @@
 
 body {
   width: 100%;
-  height: 100%;
+
   font-family: 'PT Serif', serif;
   font-weight: 400;
   color: #1e1e1e;
@@ -18,7 +18,7 @@ body {
 
 html {
     width: 100%;
-    height: 100%;
+
     margin: 0px;
     padding: 0px;
     overflow-x:hidden;
